--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "json": "npx json-server src/db.json"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "json-server": "^1.0.0-beta.2",
     "vue": "^3.4.29"
   },
   "devDependencies": {
